--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 * Correspondence: khakhalin@bard.edu
 
 \section*{Abstract}
-Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For many animals, key computations involved in looming detection and collision avoidance seem to be performed by distributed networks, making it hard to tease out their underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report a difference in graph properties of tectal networks reconstructed from younger and older tadpoles, with degree distributions and network modularity changing in development. We also describe that in tadpoles, looming-selective cells tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these results to predictions of a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured visual inputs. We show that under general conditions, our model network developed robust looming selectivity, and replicated some changes in network properties observed in imaging experiments, including increase in modularity and changes in degree distributions. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were however not observed in imaging experiments. Finally, by comparing several alternative models, we show which developmental rules may be most critical for the development of looming selectivity.
+Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For many animals, key computations involved in looming detection and collision avoidance seem to be performed by distributed networks, making it hard to tease out the underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report a difference in degree distributions and modularity of tectal networks reconstructed from younger and older tadpoles. We also describe that looming-selective cells in the tectum tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured visual inputs. We show that under general conditions, the model network developed robust looming selectivity, and replicated some network changes observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were however not observed in imaging experiments. Finally, by comparing several reduced models, we predict which developmental rules could be most critical for the development of looming selectivity in the brain.
 %TC:ignore 
 \bigskip
 
@@ -110,13 +110,25 @@ Here we use high-speed Ca imaging data to infer connectivity of small sub-networ
 
 For all mathematical methods, we provide their names and their interpretation in the main text, but leave definitions and details for the “Methods” section. For statistical analyses, we report p-values without correction, and interpret them according to Fisher, and not Neyman-Pearson philosophy \citep{greenland2016}. This approach is preferable for this study, as many of our analyses are not independent, but still ask different questions, and rely on different null model hypotheses. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses.
 
-We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles respectively apply to all analyses between younger and older animals reported in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a looming stimulus, followed by a full-field flash, followed by a spatially “scrambled” looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. High speed calcium imaging signals \citep{xu2011,truszkowski2017} were recorded from one layer of “deep” principal tectal neurons in the tectum (Fig 1B); from these videos we then extracted fluorescence traces (Fig 1C, D), and inferred average spiking of each neuron within every frame (Fig 1E).
+We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles respectively apply to all analyses between younger and older animals reported in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a looming stimulus, followed by a full-field flash, followed by a spatially “scrambled” looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. High speed calcium imaging signals \citep{xu2011,truszkowski2017} were recorded from one layer of “deep” principal tectal neurons in the tectum (Fig 1B,C); from these videos we then extracted fluorescence traces (Fig 1D,E), and inferred average spiking of each neuron within every frame (Fig 1F,G).
+
+\begin{figure*}
+\includegraphics[width=\linewidth]{fig1.png}
+\caption{
+Overview of experimental design. \textbf{A}. Four representative frames from visual stimuli of each type. \textbf{B}. Schematic of the preparation. \textbf{C}. View of the optic tectum during the calcium imaging recording. \textbf{D}. Matching regions of interest and average responses in each cell. \textbf{E}. Typical fluorescence responses to flash (F), scramble (S) and looming (L) stimuli from three cells in the tectum. \textbf{F}. Spiking estimations for these fluorescence traces. \textbf{G}. Average full-brain responses to stimuli of every type, wich 95\% confidence interval band, for one representative experiment. }
+\end{figure*}
 
 \subsection*{Responses and stimulus selectivity}
 
 Similar to previously published electrophysiology experiments \citep{khakhalin2014}, responses to flashes were fast, with a sharp peak and mild recurrent activation after the peak, while responses to looming stimuli were slower, and followed by strong recurrent activation (Fig 2A). Responses to both looming and scrambled stimuli were highly variable from one animal to another; for scrambled stimuli this can be easily explained, as frame tiles were rearranged differently in different experiments, increasing response variability. For looming stimuli however, this may indicate either an inherent variability of network configuration from animal to animal, or different levels of recurrent inhibition across preparations. We did not quantify differences in response shapes, and proceeded with the analysis of response amplitudes.
 
-The total output of observed tectal networks tended to be higher in response to looming stimuli than to flashes (on average, 39$\pm$29\% higher for younger; 25$\pm$25\% higher for older tadpoles; $p_{t1}=$ 2e-4 and 1e-3 respectively; Fig. 1B). There was no change in this preference in development ($p_t$=0.15). Responses to looming and scrambled stimuli did not differ (average differences of $-$0.03$\pm$0.15 and $-$0.01$\pm$0.20; $p_{t1}=$ 0.45 and 0.78 for younger and older animals respectively), and there was no different in development ($p_t=$ 0.80). This supports our prior observations that in tadpoles, the total tectal response depends mostly on the dynamics of visual stimuli, rather than on their geometry \citep{khakhalin2014,jang2016}.
+The total output of observed tectal networks tended to be higher in response to looming stimuli than to flashes (on average, 39$\pm$29\% higher for younger; 25$\pm$25\% higher for older tadpoles; $p_{t1}=$ 2e-4 and 1e-3 respectively; Fig. 2B). There was no change in this preference in development ($p_t$=0.15). Responses to looming and scrambled stimuli did not differ (average differences of $-$0.03$\pm$0.15 and $-$0.01$\pm$0.20; $p_{t1}=$ 0.45 and 0.78 for younger and older animals respectively), and there was no different in development ($p_t=$ 0.80). This supports our prior observations that in tadpoles, the total tectal response depends mostly on the dynamics of visual stimuli, rather than on their geometry \citep{khakhalin2014,jang2016}.
+
+\begin{figure*}
+\includegraphics[width=\linewidth]{fig2.png}
+\caption{
+Selectivity analysis. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
+\end{figure*}
 
 To quantify selectivity of individual tectal cells, we used Cohen’s $d$ effect size, in each cell, comparing amplitudes of responses to stimuli of different types (the difference in means, divided by the pooled standard deviation). We considered two measures of selectivity: that for "looming stimuli over flashes" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial organization of stimuli, as they had the same dynamics). On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), and there was no difference between stages ($p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivities within each brain: while the variance did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones, reflecting a decrease in number of top-selective cells within each brain (Fig. 2I). A more intuitive way to quantify this difference is by looking at the gap between top-selective (90th percentile) and median selective cells, which went down in older animals (0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles; $p_t=$ 0.03). Overall, these results were quite unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
 
@@ -160,9 +172,9 @@ We measured several standard network properties for every connectivity graph rec
 
 The measure of mesoscale connectivity in the graph, named weighted \textbf{network efficiency}, is defined as the average inverse shortest path, for any two nodes in the network \citep{rubinov2010toolbox,latora2001efficiency}. This value is high when, on average, there is a short path between any two randomly chosen nodes, and so signals can be easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Fig. example). Traditionally, this measure interprets graph edges as pairwise distances between the nodes, with high value edges representing weak connections; for a graph of weights however, high value edges represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. In our experiments, network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for a random network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively), or a fully randomized network with the same distribution of edge weights ($d$=$-$0.5 and $-$0.05; paired $p_t$=0.02 and 0.01 for younger and older tadpoles respectively). Efficiency did not seem to change in development ($d$=$-$0.8, $p_t$=0.06).
 
-Network \textbf{clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes forming a triangle via a third node that is connected to both of them (Fig. example). The value of clustering coefficient in our networks was small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but was still slightly larger than expected in a rewired network with same degree distribution ($d$=0.5 and 0.6, paired $p_t$=0.01 and 0.02 for younger and older animals), and similar to what would be expected for a random graph ($d$=0.1 and 0.2; paired $p_t$=0.4 and 0.3). This suggests that the observed distribution of degrees made the network less clustered than a random network, but the assortative arrangement of nodes countered this effect. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
+Network \textbf{clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes forming a triangle via a third node that is connected to both of them (Fig. example). The value of clustering coefficient in our networks was small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but was still slightly larger than expected in a rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals), and similar to what would be expected for a random graph ($d=$ 0.1 and 0.2; paired $p_t=$ 0.4 and 0.3). This suggests that the observed distribution of degrees made the network less clustered than a random network, but the assortative arrangement of nodes countered this effect. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
 
-The network \textbf{modularity} is the most commonly used measure of mesoscale network heterogeneity \citep{leicht2008community,newman2006modularity}. A network with high modularity can be split into a set of sub-networks, with higher density of connections within each sub-network, and weaker connections between sub-networks (Fig. example). In our experiments, the modularity of reconstructed networks did not differ from randomized networks with the same degree distribution ($d$=0.2 and 0.3, paired $p_t$=0.2 and 0.06, for stages 46 and 49 respectively). Randomized networks with matching degrees, however, were significantly less modular than a matching network ($d$=$-$0.6 and $-$0.4, paired $p_t$ = 3e-7 and 5e-5 respectively). The network modularity also increased in development ($d$=1.0, $p_t$ = 0.01), mostly due to changes in edge weights, as this effect did not disappear after random rewiring before comparison (for permutation rewiring, $d$=1.2, $p_t$=0.003).
+The network \textbf{modularity} is the most commonly used measure of mesoscale network heterogeneity \citep{leicht2008community,newman2006modularity}. A network with high modularity can be split into a set of sub-networks, with higher density of connections within each sub-network, and weaker connections between sub-networks (Fig. example). In our experiments, the modularity of reconstructed networks did not differ from randomized networks with the same degree distribution ($d=$ 0.2 and 0.3, paired $p_t=$ 0.2 and 0.06, for stages 46 and 49 respectively). Randomized networks with matching degrees, however, were significantly less modular than a matching network ($d$=$-$0.6 and $-$0.4, paired $p_t =$ 3e-7 and 5e-5 respectively). The network modularity also increased in development ($d=$ 1.0, $p_t =$ 0.01), mostly due to changes in edge weights, as this effect did not disappear after random rewiring before comparison (for permutation rewiring, $d=$ 1.2, $p_t=$ 0.003).
 
 The property of \textbf{hierarchical flow} is a derivative measure \citep{mones2012hierarchy} that we based on the distribution of Katz centrality values \citep{katz1953original,fletcher2018katz} (see below) within the network. Intuitively, flow hierarchy is high when connections between nodes largely point in the same direction, as it happens in layers networks, networks with chains of directed edges, or with activity sinks \citep{czegel2015hierarchy}. We hypothesized that a network of dedicated looming detectors may exhibit flow hierarchy, but the data we observed was hard to interpret, as structural non-randomness and the non-randomness of degree distribution affected hierarchical flow coefficients in opposite ways, with two effects cancelling each other. Indeed, observed networks were more hierarchical than randomized networks with matching degrees distribution ($d=$ 1.5 and 1.1, paired $p_t=$ 1e-04 and 1e-03 for younger and older tadpoles respectively), but randomized networks with matching degrees distribution were substantially less hierarchical than fully randomized networks with matching distribution of $w_{ji}$ ($d=-$4.5 and $-$2.6, paired $p_t=$ 4e-8 and 2e-6 respectively). There was no difference in development ($d=-$0.3, $p_t=$ 0.4).
 
